maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: not enough arguments for method indication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameters x, y, i.
indication()
          ^